example-conf/ingresses-v1beta1/ingress-v1beta1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    ingress.neo9.io/enable-operator: "true"
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-v1beta1
  namespace: default
spec:
  rules:
  - host: v1beta1.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-controller-default-backend
          servicePort: 80
        path: /demo
